--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       justify-content: space-between;
       align-items: center;
       font-size: 24px;
-      margin: 20px 0;
+      margin: 10px 0;
     }
 
     .click-link {
@@ -64,6 +64,10 @@
       border-radius: 30px;
       text-decoration: none;
     }
+    @media (max-length:450px){
+      .menu-title{
+      font-size: 50px;
+    }
   </style>
 </head>
 <body>
@@ -75,7 +79,7 @@
   <a href="https://wa.me/27679574239" class="contact">WhatsApp Me</a>
 
   <div class="menu">
-    <h1>Projects</h1>
+    <h1  class="menu-title">Projects</h1>
     <hr>
     <div class="menu-item">
       <span>Designers Co.</span>
